Fix responsive pager horizontal scrolling bug - Kendo UI Pro

--- a/styles/web/type-office365.less
+++ b/styles/web/type-office365.less
@@ -3259,7 +3259,6 @@ input.k-textbox:focus {
     
         .k-pager-wrap .k-pager-nav,
         .k-pager-input {
-            float:none;
             display: inline-block;
             vertical-align: top;
         }
@@ -3273,11 +3272,15 @@ input.k-textbox:focus {
             display: inline-flex;
             -webkit-flex-direction: column-reverse;
             flex-direction: column-reverse;
+            overflow: visible;
+            height: auto;
+        }
+        
+        .k-pager-numbers.k-state-expanded,
+        .k-grid .k-pager-numbers.k-state-expanded {
             -webkit-transform: translatey(-100%);
             -moz-transform: translatey(-100%);
             transform: translatey(-100%);
-            overflow: visible;
-            height: auto;
         }
         
         .km-pane-wrapper .k-pager-numbers .k-link,
